--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectName=UnityBuild
-sonar.projectKey=
-sonar.organization=
+sonar.projectKey=alejandro-alvarez-sonarsource_unitybuild
+sonar.organization=alejandro-alvarez-sonarsource
 sonar.projectVersion=1.0
 
 sonar.sources=src
