Remove debug info

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,15 +22,10 @@ jobs:
           mkdir ci-build
           cmake -S . -B ci-build
           build-wrapper-linux-x86-64 --out-dir ${{ env.BUILD_WRAPPER_OUT_DIR }} cmake --build ci-build/ --config Release
-      - name: Upload wrapper output
-        uses: actions/upload-artifact@v4
-        with:
-          name: build-wrapper-output
-          path: ${{ env.BUILD_WRAPPER_OUT_DIR }}/build-wrapper-dump.json
       - name: Run sonar-scanner
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }} # Put the name of your token here
         run: |
           # We need to specify the unity source files
-          sonar-scanner -X --define sonar.cfamily.build-wrapper-output="${{ env.BUILD_WRAPPER_OUT_DIR }}" --define sonar.sources="src,ci-build/CMakeFiles/UnityBuild.dir/Unity/"
+          sonar-scanner --define sonar.cfamily.build-wrapper-output="${{ env.BUILD_WRAPPER_OUT_DIR }}" --define sonar.sources="src,ci-build/CMakeFiles/UnityBuild.dir/Unity/"
